# api

./: .pylintrc  20240411_ISO20022_2013_eRepository.iso20022.example_alt.json  20240729_ISO20022_2013_eRepository.iso20022.example.json  ISO 20022 generating JSON Schema Draft 4 - 20240613 RLO edits.docx  MainActivity.kt  N3684 ISO 20022 Governance and Registration Process for API Resources - RMG May 2020.docx  NEW_expandables_V11.csv  PaymentRequest_simple.json  Problem.yaml  addDescription.py  addDescription_asAnnotation.py  addDescription_asAnnotationAPI.py  addDescription_asAnnotationAPI_cursor.py  addDescription_asAnnotation_from_lse.py  addTitleCodeset2024.py  app.html  app.js  casp.001.001.06.xsd_xsd2.json.bat  casp.002.001.06.xsd_xsd2.json.bat  casp.003.001.06.xsd_xsd2.json.bat  casp.004.001.05.json  casp.004.001.06.xsd_xsd2.json.bat  casp.005.001.06.xsd_xsd2.json.bat  casp.006.001.06.xsd_xsd2.json.bat  casp.007.001.06.xsd_xsd2.json.bat  casp.008.001.06.xsd_xsd2.json.bat  casp.009.001.06.xsd_xsd2.json.bat  casp.010.001.06.xsd_xsd2.json.bat  casp.011.001.06.xsd_xsd2.json.bat  casp.012.001.06.xsd_xsd2.json.bat  casp.013.001.02.xsd_xsd2.json.bat  casp.014.001.06.xsd_xsd2.json.bat  casp.015.001.06.xsd_xsd2.json.bat  casp.016.001.06.xsd_xsd2.json.bat  casp.017.001.06.xsd_xsd2.json.bat  connexion_api.py  espaceco.pu  iso20022_ancestors.js  iso_ancestor.html  isotree.py  (+41 more)
HTML/: casp.002.001.06.html
api_split/: openapi.yaml
casp_v2/: NEW_expandables_V9.csv
casp_v5/: NEW_expandables_V10.csv  NEW_expandables_V9.xls  (+18 more)
nexo-tool-package/: LICENSE  Readme.md  pyproject.toml
(+2908 files in other folders)
